<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.StepDetailFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/playerView"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:foregroundGravity="center"
            android:padding="8dp"
            android:background="@color/colorPrimaryDark">
        </com.google.android.exoplayer2.ui.PlayerView>

        <ImageView
            android:id="@+id/step_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/step_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.231" />

        <TextView
            android:id="@+id/step_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="1dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/step_previous_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playerView"
            app:layout_constraintVertical_bias="0.559" />


        <View
            android:id="@+id/button_background_view"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/step_next_button" />


        <Button
            android:id="@+id/step_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="8dp"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/step_previous_button" />

        <Button
            android:id="@+id/step_previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="76dp"
            android:layout_marginBottom="8dp"
            android:text="@string/previous"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </android.support.constraint.ConstraintLayout>

</FrameLayout>