...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:padding="16dp"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Test" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvSteps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
