...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RecipesFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvRecipes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:id="@+id/loading_spinner"
        android:layout_width="wrap_content"
...
